# min-ontology

./: .gitignore  CHANGELOG.md  LICENSE  README.md  min-meta-vocabulary.ttl  min-v1.0.0.ttl  min-v2.0.0.ttl  min-v2.1.0.ttl  min-v3.0.0.ttl  min-v3.2.0.ttl  min-v3.3.0.ttl  min-v3.4.0-delta.ttl  min-v3.4.0.ttl  min-v3.5.0.ttl  min-v3.6.0.ttl  min-v3.7.0.ttl  min.ttl  min_v3.3.0.ttl  mkdocs.yml  opa-v1.0.0.ttl  pyproject.toml  requirements-dev.txt
.github/workflows/: docs.yml  release.yml  validate.yml
alignments/: opa-min.ttl
docs/: bfo-vs-min3_2_0.html  breakfast egg_en.md  breakfast_egg_de.md  breakfast_egg_en.md  changelog.md  class-catalog.md  eierkochen_tutorial.md  examples.md  index.md  min-meta-vocabulary-de.md  min-meta-vocabulary-en.md  min-model.md  min-v1_0_0-visualization.html  min-v2.1.0-visualization.jsx  min-v2_1_0-visualization.html  min-v3_0_0-visualization.html  min-v3_3_0-visualization.html  min-v3_7_1-visualization.html  min_hierarchy.dot  min_hierarchy.mmd  property-catalog.md  versioning.md
examples/: agent.ttl  boundary.ttl  data.ttl  eierkochen.ttl  institutio.ttl  lex.ttl  min-example.ttl  min-examples.ttl  min-v3.0.0-examples.ttl  min-v3.3.0-examples.ttl  norma.ttl  object.ttl  possibile.ttl  process.ttl  structura.ttl  typus.ttl
queries/competency/: cq01.rq  cq02.rq  cq03.rq  cq04.rq  cq05.rq  cq06.rq  cq07.rq
scripts/: __init__.py  generate_hierarchy.py  validate.py
shapes/: min-core.shacl.ttl  min-instance.shacl.ttl
tests/sparql/: test-min-bridge-relations.rq  test-min-classes-v2.rq  test-min-disjointness.rq  test-min-metadata.rq  (+9 more)
