[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "min-ontology"
version = "1.0.0"
description = "MIN ontology with validation tooling."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "rdflib==7.0.0",
    "pyshacl==0.28.1",
]

[project.scripts]
ontology-validate = "scripts.validate:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
